<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_my_profile"/>
        <item
            android:id="@+id/nav_share_us"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share_app"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings_white"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    <item android:title="@string/version">
        <menu>

            <item
                android:id="@+id/version"
                android:icon="@drawable/ic_update_form"
                android:title="v0.0B" />
        </menu>
    </item>
</group>
</menu>
