<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/bottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:paddingBottom="24dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="64dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".home.ProfileFragment"
    tools:shownIn="@layout/activity_main">


    <TextView
        android:id="@+id/arogyasakhiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="@dimen/bottom_sheet_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name"
        android:layout_marginLeft="8dp" />

<!--    <ImageView-->
<!--        android:id="@+id/toggleView"-->
<!--        android:layout_width="@dimen/bottom_sheet_icon_width"-->
<!--        android:layout_height="@dimen/bottom_sheet_icon_height"-->
<!--        android:layout_marginBottom="@dimen/bottom_layout_marginBottom"-->
<!--        android:layout_marginEnd="@dimen/bottom_layout_marginEnd"-->
<!--        android:layout_marginTop="@dimen/bottom_layout_marginTop"-->
<!--        android:src="@drawable/ic_arrow_upward"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/view"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:layout_marginRight="@dimen/bottom_layout_marginRight" />-->

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeUpHint" />

    <TextView
        android:id="@+id/swipeUpHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/swipe_up_hint_text"
        android:textColor="@color/valueColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@id/arogyasakhiName" />

<!--    <android.support.constraint.Guideline-->
<!--        android:id="@+id/guideline"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintGuide_begin="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

    <TextView
        android:id="@+id/regCountLabel"
        style="@style/labelTextStyle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="40dp"
        android:text="@string/register_count"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/womanCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="224dp"
        android:layout_marginLeft="224dp"
        android:drawable="@drawable/ic_pregnant_woman"
        android:drawablePadding="2dp"
        android:text="@string/women_list"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/regCountLabel" />

    <TextView
        android:id="@+id/childCount"
        style="@style/valueTextStyle"
        android:layout_width="108dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:drawable="@drawable/ic_child_care"
        android:drawablePadding="4dp"
        android:text="@string/children_list"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/womanCount" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childCount" />

    <TextView
        android:id="@+id/visitCountLabel"
        style="@style/labelTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/visits_count"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <TextView
        android:id="@+id/totalVisitCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_visits"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/visitCountLabel" />

    <TextView
        android:id="@+id/incompleteVisitCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/incomplete_visit"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/totalVisitCount" />

    <TextView
        android:id="@+id/dueVisitCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/due_visits"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/incompleteVisitCount" />

    <TextView
        android:id="@+id/overdueVisitCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/overdue_visits"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/dueVisitCount" />

<!--    <androidx.constraintlayout.widget.Barrier-->
<!--        android:id="@+id/barrier"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:barrierDirection="end"-->
<!--        app:constraint_referenced_ids="womanCount,totalVisitCount,referralCount,dueVisitCount" />-->

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overdueVisitCount" />

    <TextView
        android:id="@+id/referralCountLabel"
        style="@style/labelTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/referral_count"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/referralCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_referral"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/referralCountLabel" />

    <TextView
        android:id="@+id/notReferredCount"
        style="@style/valueTextStyle"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/not_referral"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/referralCount"
        android:layout_marginLeft="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>